tests/files/lexer_tests/should_fail/069.cmdr
// Lexer should throw an error due to unterminated string (caused by escape character)
a = 'This is an escape: \';